# builddiag

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  DCodeRustbuilddiagcucumber_output.txt  GEMINI.md  LICENSE-APACHE  README.md  ROADMAP.md  TESTING.md  codecov.yml  coverage.json  dist-workspace.toml  missing_lines.txt
.cargo/: mutants.toml
.github/: settings.yml
.github/workflows/: builddiag.yml  ci.yml  release.yml
.kiro/specs/bdd-receipt-contract/: .config.kiro  design.md  requirements.md
.kiro/specs/comprehensive-test-coverage/: design.md  requirements.md  tasks.md
.kiro/specs/developer-experience/: design.md  requirements.md  tasks.md
.kiro/specs/release-ready/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
artifacts/builddiag/: comment.md  report.json
contracts/schemas/: sensor.report.v1.schema.json
coverage-html/html/: index.html
crates/builddiag-app/: CLAUDE.md  Cargo.toml  README.md
crates/builddiag-app/src/: lib.rs
crates/builddiag-baseline/: CLAUDE.md  Cargo.toml  README.md
crates/builddiag-baseline/src/: lib.rs
crates/builddiag-checks/: CLAUDE.md  Cargo.toml  README.md
crates/builddiag-checks-catalog/: Cargo.toml  README.md
crates/builddiag-checks-catalog/src/: lib.rs
crates/builddiag-checks-checksums/: Cargo.toml  README.md
crates/builddiag-checks-checksums/src/: lib.rs
crates/builddiag-checks-deps/: Cargo.toml  README.md
crates/builddiag-checks-deps/src/: lib.rs
crates/builddiag-checks/src/: lib.rs
crates/builddiag-checks/src/msrv_consistent/: member_msrv.rs  mismatch.rs  mod.rs  workspace_msrv.rs
crates/builddiag-checks/tests/: check_properties.proptest-regressions  check_properties.rs
crates/builddiag-cli/: CLAUDE.md  Cargo.toml  README.md
crates/builddiag-cli/src/: main.rs
crates/builddiag-cli/tests/: cli_annotations.rs  cli_baseline.rs  cli_check.rs  cli_config.rs  cli_diff_aware.rs  cli_exit_codes.rs  cli_explain.rs  cli_list_checks.rs  cli_md.rs  cli_smoke.rs  cucumber.rs
crates/builddiag-cli/tests/bdd/: helpers.rs  mod.rs  steps.rs  world.rs
crates/builddiag-cli/tests/features/: check_catalog.feature  checksums_validation.feature  configuration.feature  exit_codes.feature  extended_checks.feature  msrv_validation.feature  path_normalization.feature  receipt_contract.feature  toolchain_pinning.feature
crates/builddiag-core/: Cargo.toml  README.md
crates/builddiag-core/src/: lib.rs
crates/builddiag-domain/: CLAUDE.md  Cargo.toml  README.md
crates/builddiag-domain/src/: explain.rs  lib.rs
crates/builddiag-domain/tests/: domain_properties.rs
crates/builddiag-fix/: CLAUDE.md  Cargo.toml  README.md
crates/builddiag-fix/src/: lib.rs
crates/builddiag-hooks/: CLAUDE.md  Cargo.toml  README.md
crates/builddiag-hooks/src/: lib.rs
crates/builddiag-output-contract/: Cargo.toml
crates/builddiag-output-contract/src/: lib.rs  report.rs  sensor.rs
crates/builddiag-paths/: CLAUDE.md  Cargo.toml  README.md
crates/builddiag-paths/src/: lib.rs
crates/builddiag-paths/tests/: paths_integration.rs  paths_properties.rs
crates/builddiag-receipt/: CLAUDE.md  Cargo.toml  README.md
crates/builddiag-receipt/src/: lib.rs
crates/builddiag-render/: CLAUDE.md  Cargo.toml  README.md
crates/builddiag-render/src/: lib.rs
crates/builddiag-render/tests/: golden_tests.rs  render_properties.proptest-regressions  render_properties.rs
crates/builddiag-render/tests/snapshots/: golden_tests__annotations_empty_findings.snap  golden_tests__annotations_mixed_findings.snap  golden_tests__annotations_mixed_findings_with_info.snap  golden_tests__annotations_special_characters.snap  golden_tests__annotations_truncated.snap  golden_tests__markdown_empty_findings.snap  golden_tests__markdown_mixed_findings.snap  golden_tests__markdown_mixed_findings_with_info.snap  golden_tests__markdown_no_location.snap  golden_tests__markdown_special_characters.snap  golden_tests__markdown_truncated.snap  golden_tests__markdown_truncated_with_info.snap  golden_tests__markdown_verdict_error.snap  golden_tests__markdown_verdict_fail.snap  golden_tests__markdown_verdict_pass.snap  golden_tests__markdown_verdict_skip.snap  golden_tests__markdown_verdict_warn.snap
crates/builddiag-repo/: CLAUDE.md  Cargo.toml  README.md
crates/builddiag-repo/src/: cache.rs  lib.rs
crates/builddiag-repo/tests/: repo_properties.rs
crates/builddiag-testkit/: Cargo.toml
crates/builddiag-testkit/src/: cli.rs  fs.rs  lib.rs  repo.rs
crates/builddiag-types/: CLAUDE.md  Cargo.toml  README.md
crates/builddiag-types/src/: lib.rs
crates/builddiag-types/tests/: types_properties.rs
crates/builddiag-watch/: CLAUDE.md  Cargo.toml  README.md
crates/builddiag-watch/src/: lib.rs
crates/depguard/: CLAUDE.md  Cargo.toml  README.md
crates/depguard/src/: lib.rs
docs/: README.md  architecture.md  checks.md  config.md  design.md  implementation.md  integration.md  requirements.md  testing.md
examples/: builddiag.toml
examples/presets/: oss.toml  strict.toml  team.toml
fixtures/conformance/all-disabled/: .builddiag.toml  Cargo.toml
fixtures/conformance/all-skip/: .builddiag.toml  Cargo.toml
fixtures/conformance/broken-config/: .builddiag.toml  Cargo.toml
fixtures/conformance/missing-msrv/: Cargo.toml
fixtures/conformance/valid-workspace/: Cargo.toml
fixtures/golden/: all-disabled.native.report.json  all-disabled.report.json  all-skip.report.json  missing-msrv.native.report.json  missing-msrv.report.json  valid-workspace.native.report.json  valid-workspace.report.json
fuzz/: .gitignore  Cargo.toml
fuzz/artifacts/: .gitignore
fuzz/corpus/: .gitignore
fuzz/corpus/fuzz_checksums/: tabs  (+5 more)
fuzz/fuzz_targets/: fuzz_checksums.rs  fuzz_config.rs  fuzz_paths.rs  fuzz_render.rs  fuzz_report.rs  fuzz_toml.rs  fuzz_version.rs
schemas/: builddiag.config.v1.schema.json  builddiag.report.v1.json  builddiag.report.v1.schema.json  sensor.report.v1.schema.json
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/tests/: metadata_properties.rs
(+39 files in other folders)
