[workspace]
resolver = "2"
members = [
  "crates/builddiag-types",
  "crates/builddiag-domain",
  "crates/builddiag-repo",
  "crates/builddiag-checks",
  "crates/builddiag-render",
  "crates/builddiag-app",
  "crates/builddiag-cli",
  "crates/depguard",
  "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/builddiag"
homepage = "https://github.com/EffortlessMetrics/builddiag"

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = { version = "1.2.1", features = ["chrono04"] }
clap = { version = "4.5.56", features = ["derive"] }
toml = "0.9.8"
globset = "0.4.18"
cargo_metadata = "0.23.1"
semver = "1.0.27"
sha2 = "0.10.9"
hex = "0.4.3"
chrono = { version = "0.4.43", default-features = false, features = [
  "clock",
  "serde",
] }
camino = "1.2.2"
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.24.0"
insta = { version = "1.46.2", features = ["json"] }
proptest = "1.9.0"
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
