[workspace]
resolver = "2"
members = [
  "crates/builddiag-types",
  "crates/builddiag-domain",
  "crates/builddiag-repo",
  "crates/builddiag-checks",
  "crates/builddiag-render",
  "crates/builddiag-app",
  "crates/builddiag-core",
  "crates/builddiag-cli",
  "crates/depguard",
  "xtask",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-msrv = "1.91"
repository = "https://github.com/EffortlessMetrics/builddiag"
homepage = "https://github.com/EffortlessMetrics/builddiag"

[workspace.dependencies]
anyhow = "1.0.101"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = { version = "1.2.1", features = ["chrono04"] }
clap = { version = "4.5.57", features = ["derive"] }
toml = "0.9.8"
globset = "0.4.18"
cargo_metadata = "0.23.1"
semver = "1.0.27"
sha2 = "0.10.9"
hex = "0.4.3"
chrono = { version = "0.4.43", default-features = false, features = [
  "clock",
  "serde",
] }
camino = "1.2.2"
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.24.0"
insta = { version = "1.46.3", features = ["json"] }
proptest = "1.10.0"
rayon = "1.11.0"
rustsec = "0.32.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
