[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
schemars.workspace = true
serde_json.workspace = true
camino.workspace = true
builddiag-types = { path = "../crates/builddiag-types" }
