[package]
name = "builddiag-baseline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Baseline filtering and snapshot support for builddiag findings"
keywords = ["rust", "build-contract", "baseline", "ci"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
camino.workspace = true
builddiag-types = { path = "../builddiag-types", version = "0.3.0" }
builddiag-domain = { path = "../builddiag-domain", version = "0.3.0" }

[dev-dependencies]
tempfile.workspace = true
