[package]
name = "builddiag-checks-deps"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Dependency-oriented checks for builddiag"
readme = "README.md"
documentation = "https://docs.rs/builddiag-checks-deps"
keywords = ["rust", "builddiag", "dependency", "deps", "security"]
categories = ["development-tools"]

[features]
default = []
security = ["dep:rustsec"]

[dependencies]
anyhow.workspace = true
builddiag-domain = { path = "../builddiag-domain", version = "0.3.0" }
builddiag-repo = { path = "../builddiag-repo", version = "0.3.0" }
builddiag-types = { path = "../builddiag-types", version = "0.3.0" }
depguard = { path = "../depguard", version = "0.3.0" }
camino.workspace = true
rustsec = { workspace = true, optional = true }
toml.workspace = true
