[package]
name = "builddiag-checks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal checks for builddiag (not intended for direct use)"
keywords = ["rust", "build", "validation", "lint"]
categories = ["development-tools"]

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
security = ["dep:rustsec"]

[dependencies]
anyhow.workspace = true
globset.workspace = true
sha2.workspace = true
hex.workspace = true
builddiag-types = { path = "../builddiag-types" }
builddiag-domain = { path = "../builddiag-domain" }
builddiag-repo = { path = "../builddiag-repo" }
depguard = { path = "../depguard" }
camino.workspace = true
rayon = { workspace = true, optional = true }
rustsec = { workspace = true, optional = true }
toml.workspace = true

[dev-dependencies]
proptest = "1.4"
tempfile.workspace = true
