[package]
name = "builddiag-checks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Check registry and implementations for builddiag workspace contract validation"
readme = "README.md"
documentation = "https://docs.rs/builddiag-checks"
keywords = ["rust", "builddiag", "lint", "policy", "workspace"]
categories = ["development-tools"]

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
security = ["dep:rustsec"]

[dependencies]
anyhow.workspace = true
globset.workspace = true
sha2.workspace = true
hex.workspace = true
builddiag-types = { path = "../builddiag-types", version = "0.3.0" }
builddiag-domain = { path = "../builddiag-domain", version = "0.3.0" }
builddiag-repo = { path = "../builddiag-repo", version = "0.3.0" }
depguard = { path = "../depguard", version = "0.3.0" }
camino.workspace = true
rayon = { workspace = true, optional = true }
rustsec = { workspace = true, optional = true }
toml.workspace = true

[dev-dependencies]
proptest = "1.4"
tempfile.workspace = true
