[package]
name = "builddiag"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Offline build-contract sensor for Rust workspaces; emits JSON receipts and Markdown summaries"
readme = "README.md"
keywords = ["rust", "cli", "build", "validation", "msrv"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
camino.workspace = true
chrono.workspace = true
builddiag-app = { path = "../builddiag-app", version = "0.3.0" }
builddiag-baseline = { path = "../builddiag-baseline", version = "0.3.0" }
builddiag-checks = { path = "../builddiag-checks", version = "0.3.0" }
builddiag-core = { path = "../builddiag-core", version = "0.3.0" }
builddiag-fix = { path = "../builddiag-fix", version = "0.3.0" }
builddiag-domain = { path = "../builddiag-domain", version = "0.3.0" }
builddiag-render = { path = "../builddiag-render", version = "0.3.0" }
builddiag-types = { path = "../builddiag-types", version = "0.3.0" }
builddiag-watch = { path = "../builddiag-watch", version = "0.3.0" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2.1.2"
tempfile.workspace = true
predicates = "3.1.3"
cucumber = "0.22.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "cucumber"
harness = false
