[package]
name = "builddiag-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core domain logic for builddiag build contract validator"
keywords = ["rust", "build", "validation"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
semver.workspace = true
builddiag-types = { path = "../builddiag-types" }

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
regex = "1"
