[package]
name = "builddiag-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Pure domain logic for builddiag verdicts, summaries, version parsing, and fingerprints"
readme = "README.md"
documentation = "https://docs.rs/builddiag-domain"
keywords = ["rust", "builddiag", "domain", "verdict", "policy"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
semver.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
builddiag-types = { path = "../builddiag-types", version = "0.3.0" }

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
regex = "1"
