[package]
name = "builddiag-fix"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Deterministic fix planner and applier for selected builddiag findings"
readme = "README.md"
documentation = "https://docs.rs/builddiag-fix"
keywords = ["rust", "builddiag", "autofix", "workspace", "deterministic"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
camino.workspace = true
toml.workspace = true
sha2.workspace = true
builddiag-domain = { path = "../builddiag-domain", version = "0.3.0" }
builddiag-repo = { path = "../builddiag-repo", version = "0.3.0" }
builddiag-types = { path = "../builddiag-types", version = "0.3.0" }

[dev-dependencies]
tempfile.workspace = true
