[package]
name = "builddiag-paths"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Path normalization helpers for builddiag repo-relative outputs"
readme = "README.md"
documentation = "https://docs.rs/builddiag-paths"
keywords = ["rust", "builddiag", "paths", "normalize"]
categories = ["development-tools"]

[dependencies]
camino.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
