[package]
name = "builddiag-render"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal rendering for builddiag reports (not intended for direct use)"
keywords = ["rust", "build-contract", "markdown", "report"]
categories = ["development-tools"]

[dependencies]
builddiag-types = { path = "../builddiag-types", version = "0.3.0" }

[dev-dependencies]
insta.workspace = true
chrono.workspace = true
proptest.workspace = true
