[package]
name = "builddiag-render"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Renderer for builddiag markdown summaries, GitHub annotations, and diagnostics"
readme = "README.md"
documentation = "https://docs.rs/builddiag-render"
keywords = ["rust", "builddiag", "markdown", "github-actions", "diagnostics"]
categories = ["development-tools"]

[dependencies]
builddiag-types = { path = "../builddiag-types", version = "0.3.0" }

[dev-dependencies]
insta.workspace = true
chrono.workspace = true
proptest.workspace = true
