[package]
name = "builddiag-repo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Repository discovery, workspace parsing, and repo-state loading for builddiag"
readme = "README.md"
documentation = "https://docs.rs/builddiag-repo"
keywords = ["rust", "builddiag", "workspace", "cargo", "metadata"]
categories = ["development-tools"]

[features]
default = ["cache"]
cache = ["dep:serde_json", "dep:sha2", "dep:hex"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
toml.workspace = true
cargo_metadata.workspace = true
camino.workspace = true
globset.workspace = true
builddiag-domain = { path = "../builddiag-domain", version = "0.3.0" }
builddiag-types = { path = "../builddiag-types", version = "0.3.0" }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
