[package]
name = "builddiag-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared types for builddiag build contract validator"
repository = "https://github.com/user/builddiag"
homepage = "https://github.com/user/builddiag"
keywords = ["rust", "build", "validation"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
chrono.workspace = true

[features]
default = []
