[package]
name = "builddiag-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal DTOs and schema types for builddiag (not intended for direct use)"
keywords = ["rust", "build-contract", "schema"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
toml.workspace = true

[features]
default = []
