[package]
name = "builddiag-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared schemas and data types for builddiag reports, config, and substrate input"
readme = "README.md"
documentation = "https://docs.rs/builddiag-types"
keywords = ["rust", "builddiag", "schema", "report", "config"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
toml.workspace = true

[features]
default = []
