[package]
name = "builddiag-watch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Deterministic polling watch loop for rerunning builddiag checks on file changes"
readme = "README.md"
documentation = "https://docs.rs/builddiag-watch"
keywords = ["rust", "builddiag", "watch", "polling", "debounce"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
camino.workspace = true

[dev-dependencies]
tempfile.workspace = true
