[package]
name = "depguard"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Dependency hygiene sensor for Rust workspaces"
repository = "https://github.com/EffortlessMetrics/builddiag"
readme = "README.md"
keywords = ["rust", "dependencies", "lint", "workspace"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
camino.workspace = true
toml.workspace = true
semver.workspace = true
globset.workspace = true

[dev-dependencies]
tempfile.workspace = true
