[package]
name = "depguard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Dependency hygiene checks for Cargo workspaces (wildcards, path versions, inheritance)"
readme = "README.md"
documentation = "https://docs.rs/depguard"
keywords = ["rust", "dependencies", "workspace", "cargo", "lint"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
camino.workspace = true
toml.workspace = true
globset.workspace = true

[dev-dependencies]
tempfile.workspace = true
